<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray30">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/gray30"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="5dp">

        <Spinner
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="30dp"
            android:entries="@array/priorities"
            android:fontFamily="@font/roboto"
            android:popupBackground="@color/blue90"
            android:theme="@style/Spinner.Style"
            tools:ignore="TouchTargetSizeCheck">

        </Spinner>

        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/todo_edit_summary"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:hint="@string/title"
                android:textColor="@color/gray_b"
                android:textSize="30sp"
                android:theme="@android:style/Theme.Holo"
                tools:ignore="TouchTargetSizeCheck">

            </EditText>

        </LinearLayout>

        <EditText
            android:id="@+id/todo_edit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:gravity="top"
            android:hint="@string/description"
            android:textColor="@color/blue60"
            android:textSize="25sp"
            android:theme="@android:style/Theme.Holo"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck">

        </EditText>


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/todo_edit_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="80dp"
        android:fontFamily="@font/roboto"
        android:text="@string/add"
        android:textColor="@color/white"
        android:theme="@style/Button.Style"
        app:cornerRadius="18dp"
        app:iconGravity="textEnd|textTop|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>